--- a/instances/ibm-sfg-b2bi-prod/values.yaml
+++ b/instances/ibm-sfg-b2bi-prod/values.yaml
@@ -10,7 +10,7 @@ ibm-sfg-prod:
     # Provide the tag value in double quotes
       tag: ubi-7.8
       pullPolicy: IfNotPresent
-      pullSecret: ibm-entitlement-key
+      pullSecret: b2bi-prod-pull
   serviceAccount:
     create: false
     name: b2bi
