--- a/instances/ibm-sfg-b2bi-prod/values.yaml
+++ b/instances/ibm-sfg-b2bi-prod/values.yaml
@@ -263,11 +263,11 @@ ibm-sfg-prod:
   purge:
     enabled: false
     image:
-      repository: cp.icr.io/cp/ibm-sfg/sfg-purge
+      repository: image-registry.openshift-image-registry.svc:5000/b2bi-prod/custom-sfg
     # Provide the tag value in double quotes
-      tag: 6.1.0.0
+      tag: ubi-7.8
       pullPolicy: IfNotPresent
-      pullSecret: ibm-entitlement-key
+      pullSecret: b2bi-prod-pull
     # Provide a schedule for the purge job as a cron expression. For example "0 0 * * *" will run the purge job at 00:00 every day
     schedule: "*/30 * * * *"
     startingDeadlineSeconds:
